--- a/drawing_face/main.css
+++ b/drawing_face/main.css
@@ -27,6 +27,15 @@
   box-shadow: 2px 2px 8px 2px rgba(253, 252, 252, 0.7);
 }
 
+.hair {
+  position: absolute;
+  left: 30px;
+  height: 230px;
+  width: 230px;
+  border-radius: 50%;
+  background-color: black;
+}
+
 .face {
   position: relative;
   left: 47px;
@@ -61,25 +70,17 @@
   height: 20px;
   background-color: rgb(240, 237, 233);
   top: 16px;
+  left: 8px;
   border-radius: 50%;
-}
-
-.nose {
-  position: relative;
-  left: 98px;
-  top: 20px;
-  z-index: 182;
-  background-color: rgb(134, 32, 49);
-  border-radius: 10px;
 }
 
 .lips {
   position: relative;
   height: 90px;
-  width: 60px;
-  left: 75px;
-  top: -25px;
-  border-radius: 25px;
+  width: 80px;
+  left: 62px;
+  top: -15px;
+  border-radius: 35px;
   border-bottom: 5px solid black;
 }
 
