--- a/mate/style.css
+++ b/mate/style.css
@@ -3,3 +3,23 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  height: 100vh;
+  background-color: rgb(127, 225, 255);
+}
+
+.container {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 400px;
+  width: 400px;
+  background-color: black;
+  border: 3px solid white;
+  border-radius: 50%;
+  box-shadow: 3px 2px 5px 3px rgb(6, 79, 88);
+}
