--- a/mate/style.css
+++ b/mate/style.css
@@ -22,4 +22,58 @@ body {
   border: 3px solid white;
   border-radius: 50%;
   box-shadow: 3px 2px 5px 3px rgb(6, 79, 88);
+  z-index: 0;
+}
+
+.mate {
+  position: relative;
+  top: 100px;
+  left: 100px;
+  width: 200px;
+  height: 200px;
+  background-color: rgb(85, 62, 32);
+  border-radius: 50%;
+  border-top: 4px solid rgb(0, 0, 0);
+  z-index: 1;
+}
+.base-mate {
+  position: relative;
+  z-index: 5;
+  left: 293px;
+  top: 575px;
+  height: 50px;
+  width: 100px;
+  background-color: rgb(0, 0, 0);
+}
+.yerba {
+  position: relative;
+  z-index: 2;
+  top: -87px;
+  left: 123px;
+  width: 150px;
+  height: 50px;
+  background-color: rgb(56, 95, 19);
+  border: 3px solid rgb(163, 159, 159);
+  border-radius: 50%;
+}
+.shadow-yerba {
+  position: relative;
+  top: 5px;
+  height: 35px;
+  width: 85px;
+  background-color: rgb(7, 53, 7);
+  border-radius: 50%;
+}
+.bombilla {
+  position: relative;
+  z-index: 3;
+  top: -210px;
+  left: 120px;
+  width: 23px;
+  height: 100px;
+  background-color: rgb(162, 167, 162);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top: 2px solid rgb(79, 85, 79);
+  transform: rotate(-20deg);
 }
